--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fastify/static": "^6.11.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-fastify": "^10.2.7",
+    "@nestjs/swagger": "^7.1.13",
     "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -32,7 +35,6 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
