--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "push:envdb": "dotenv -e .env.development -- npx prisma db push",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start": "dotenv -e .env.development -- nest start",
+    "start:dev": "dotenv -e .env.development -- nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "dotenv -e -c -- node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "dotenv -e .env.development -- jest",
+    "test:watch": "dotenv -e .env.development -- jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "dotenv -e .env.development -- jest --config ./test/jest-e2e.json",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-fastify": "^10.2.7",
     "@nestjs/swagger": "^7.1.13",
+    "@prisma/client": "^5.5.1",
     "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -48,6 +50,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.0",
+    "prisma": "^5.5.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
