--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "dotenv -e .env.development -- nest start",
     "start:dev": "dotenv -e .env.development -- nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "dotenv -e -c -- node dist/main",
+    "start:debug": "dotenv -e .env.development -- nest start --debug --watch",
+    "start:prod": "dotenv -e .env -- node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "dotenv -e .env.development -- jest",
     "test:watch": "dotenv -e .env.development -- jest --watch",
