--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid-buffer": "^1.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -45,8 +46,8 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-no-relative-import-paths": "^1.5.2",
