--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:watch": "dotenv -e .env.development -- jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "dotenv -e .env.development -- jest --config ./test/jest-e2e.json",
+    "test:e2e": "dotenv -e .env.development -- jest --watch --no-cache --config ./test/jest-e2e.json",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "7.3.0",
     "fastify": "^4.24.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -73,6 +74,9 @@
       "ts"
     ],
     "rootDir": "src",
+    "modulePaths": [
+      "<rootDir>"
+    ],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -91,7 +95,7 @@
     "printWidth": 80,
     "tabWidth": 2,
     "useTabs": false,
-    "semi": true,
+    "semi": false,
     "singleQuote": true,
     "trailingComma": "all",
     "bracketSpacing": true,
