--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,6 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false,
-    "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noFallthroughCasesInSwitch": false
   }
 }
